addthis for share posts, fixing navbar on mobile, fixing mobile responsive

--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -76,3 +76,4 @@ $navbar-inverse-link-hover-color:           darken(#fff, 15%)
 $navbar-inverse-link-active-color:          $navbar-inverse-link-hover-color
 $navbar-inverse-link-active-bg:             darken($navbar-inverse-bg, 10%)
 
+$default-feature : min-width
