--- a/src/assets/sass/layout/_sections.sass
+++ b/src/assets/sass/layout/_sections.sass
@@ -1,10 +1,13 @@
 .section
   &__title
     text-transform: uppercase
-    font-size: 3em
+    font-size: 2.2em
     position: relative
     letter-spacing: -.03em
     color: rgba($dark-gray, .9)
+
+    +media($container-desktop)
+      font-size: 3em
 
     a
       opacity: .4
@@ -19,7 +22,10 @@
 
     &--cast
       z-index: 1
-      top: 25px
+      top: 20px
+
+      +media($container-desktop)
+        top: 25px
 
   &__subtitle
     font-size: 2em
